<resources>
    <string name="app_name"> سیستم تردد آشارداشار</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">نام کاربری یا رمز عبور اشتباه است</string>
    <string name="error_invalid_password">رمز عبور کوتاه تر از حد مجاز است</string>
    <string name="error_incorrect_password">نام کاربری یا رمز عبور اشتباه است</string>
    <string name="error_field_required">این فیلد ضروری است</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_clock">ساعت زنی</string>
    <string name="title_home">ثبت ساعت</string>
    <string name="title_dashboard">داشبورد</string>
    <string name="title_web">وب</string>
    <string name="title_settings">تنظیمات</string>
    <string name="title_notifications">اطلاع رسانی</string>
    <string name="title_shake_clocking">ساعت زنی با تکان دادن</string>
    <string name="title_activity_gps">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_clock_page_name">لطفا جهت ثبت کارت ورود یا خروج دگمه ثبت ساعت زیر را لمس نمایید</string>
    <string name="title_clock_page_clockin">ثبت ساعت</string>
    <string name="update_time">آپدیت ساعت از اینترنت</string>
    <string name="dashboard_inmap">در نقشه</string>
    <string name="dashboard_login">ورود به سیستم</string>
    <string name="dashboard_next_generation">    نسل بعدی سیستم های تردد</string>
    <string name="login_username">    نام کاربری</string>
    <string name="login_password">        رمز عبور</string>
    <string name="login_rememberme"> مرا به یاد داشته باش</string>
    <string name="office_location_placename">    نام مکان</string>
    <string name="office_location_list_create_new">ثبت مکان جدید</string>
    <string name="office_setting_one_device">    ثبت ساعت از یک دستگاه</string>
    <string name="office_face_recognation">    استفاده از تشخیص چهره</string>
    <string name="setting_notifications">اطلاع رسانی</string>
    <string name="setting_quit">خروج</string>
    <string name="setting_wifi_not_found">    همچنان Wifi یافت نشد است</string>
    <string name="personNameTextView">personNameTextView</string>
    <string name="statusTextView">statusTextView</string>
    <string name="web_link"><a href="http://mohammad-jafariyan.somee.com">وب سایت</a></string>
    <string name="lastOutTextView">lastOutTextView</string>
    <string name="lastInTextView">lastInTextView</string>
    <string name="reading_gps">برنامه منتظر دریافت مکان شما می باشد ممکن است لحظاتی طول بکشد</string>
    <string name="description">    لطفا جهت ورود به سیستم نام کاربری و رمز عبور را از پشتیبانی دریافت نمایید</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="preference_file_key">demo.sobhansystems.ir.pk</string>
    <string name="title_activity_personnel_detail">جزئیات تردد پرسنل</string>
    <string name="tab_text_1">تردد</string>
    <string name="tab_text_2">خلاصه کارکرد</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_show_user_location">ShowUserLocationActivity</string>
    <string name="access_token">pk.eyJ1IjoibW9oYW1tYWRqYWZhcml5YW43IiwiYSI6ImNqcXRqenkyczBha2k0M281NjQ0amVlNWwifQ.xD69Nt5VabUT8dwmlTOdWQ</string>
    <string name="title_activity_web">ابزار </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">نوار ابزار </string>
    <string name="nav_header_subtitle">با انتخاب منو به صفحه مورد نظر هدایت می شوید</string>
    <string name="nav_header_desc">Navigation header</string>
</resources>
