<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="50dp"
        android:layout_height="52dp"
        android:layout_alignParentLeft="true"
        app:srcCompat="@drawable/ic_dashboard_black_24dp"></ImageView>

    <TextView
        android:id="@+id/personNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personNameTextView"
        android:layout_toRightOf="@id/icon"
        android:textSize="15dp"></TextView>


    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statusTextView"
        android:layout_toRightOf="@id/icon"
        android:layout_alignBottom="@id/icon"
        android:layout_marginLeft="5dp"

        android:textSize="10dp"></TextView>

    <TextView
        android:id="@+id/lastInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastOutTextView"
        android:layout_alignParentRight="true"
        android:layout_below="@id/personNameTextView"
        android:textSize="15dp"></TextView>


    <TextView
        android:id="@+id/lastOutTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastInTextView"
        android:textSize="15dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/lastInTextView"
        ></TextView>

</RelativeLayout>
